--- a/offers.html
+++ b/offers.html
@@ -9,10 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="./images/favicon_io (1)/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/favicon_io/favicon.ico" type="image/x-icon">
 </head>
 <body>
-<section class="header">
+<section class="sub-header">
 <nav>
     <a href="index.html"><img src="./images/logo.png"></a>
     <div class="nav-links" id="navLinks">
@@ -27,16 +27,10 @@
     </div>
     <i class="fa fa-bars" onclick="showMenu()"></i>
 </nav>
-
-<div class="text-box">
-    <h1>MJES BOOKKEEPING SERVICES</h1>
-    <p> Bookkeeping is the systematic process of recording, organizing, and maintaining financial transactions and information of a business or organization. 
-        It involves the methodical recording of all financial activities, including sales, purchases, receipts, and payments. </p>
-    <a href="" class="hero-btn">Visit Us To Know More</a>
-</div>
+    <h1>OUR OFFERS</h1>
 </section>
 
-<!-- OFFERS -->
+<!-- Offer Content -->
 <section class="offers">
     <h1>Services we Offer</h1>
     <p> We In MJES offers essential benefits, including systematic financial organization crucial for generating reports and assessing a business's financial health.     </p>
@@ -75,8 +69,7 @@
         </ul>
      </div>
 </section>
-
-<!-- CLIENTTS -->
+<!-- CLIENTS -->
 <section class="clients">
     <h1>Our Clients</h1>
     <p>Here is our expected clients</p>
@@ -102,47 +95,6 @@
         </div>
     </div>
 </section>
-
-<!-- TESTIMONIALS -->
-<section class="testimonials">
-    <h1>What Our Clients Says</h1>
-    <p>Reviews  of our  clients</p>
-
-        <div class="row">
-            <div class="testimonial-col">
-                <img src="./images/user1.jpg">
-                <div>
-                    <p>FeedBack</p>
-                    <h3>Clients Name</h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-            </div>
-            <div class="testimonial-col">
-                <img src="./images/user2.jpg">
-                <div>
-                    <p>FeedBack</p>
-                    <h3>Clients Name</h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-            </div>
-        </div>
-</section>
-
-<!-- Call To Action -->
-
-<section class="cta">
-    <h1>Let us Move Forward Together</h1>
-    <a href="" class="hero-btn">CONTACT US</a>
-</section>
-
 <!-- Footer-->
  
 <section class="footer">
