--- a/offers.html
+++ b/offers.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="icon" href="./images/favicon_io/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./images/favicon_io (1)/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <section class="sub-header">
@@ -18,21 +18,20 @@
     <div class="nav-links" id="navLinks">
         <i class="fa fa-times" onclick="hideMenu()"></i>
         <ul>
+            
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="offers.html">OFFERS</a></li>
             <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="contact.php">CONTACT</a></li>
         </ul>
     </div>
     <i class="fa fa-bars" onclick="showMenu()"></i>
 </nav>
-    <h1>OUR OFFERS</h1>
 </section>
-
 <!-- Offer Content -->
 <section class="offers">
-    <h1>Services we Offer</h1>
+    <h1>Services We Offer</h1>
     <p> We In MJES offers essential benefits, including systematic financial organization crucial for generating reports and assessing a business's financial health.     </p>
     
     <div class="row">
