--- a/about.html
+++ b/about.html
@@ -18,18 +18,18 @@
     <div class="nav-links" id="navLinks">
         <i class="fa fa-times" onclick="hideMenu()"></i>
         <ul>
+            
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="offers.html">OFFERS</a></li>
             <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="contact.php">CONTACT</a></li>
         </ul>
     </div>
     <i class="fa fa-bars" onclick="showMenu()"></i>
 </nav>
-    <h1>About Us</h1>
 </section>
-
+<center><h1>About us</h1></center>
 <!-- About Us Content -->
 <section class="about-us">
     <div class="row">
@@ -38,7 +38,7 @@
             <p>Vision</p>
             <h1>Mission</h1>
             <p>Mision</p>
-            <a href="" class="hero-btn red-btn">EXPLORE NOW</a>
+            <a href="blog.html" class="hero-btn red-btn">EXPLORE NOW</a>
         </div>
         <div class="about-col">
             <img src="./images/about.jpg">
