--- a/blog.html
+++ b/blog.html
@@ -22,14 +22,14 @@
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="offers.html">OFFERS</a></li>
             <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="contact.php">CONTACT</a></li>
         </ul>
     </div>
     <i class="fa fa-bars" onclick="showMenu()"></i>
 </nav>
-    <h1>Our Certificates & Progrmas</h1>
+    
 </section>
-
+<center><h1>Our Certificates & Progrmas</h1></center>
 <!-- BLOG CONTENT-->
 <section class="blog-content">
     <div class="row">
