--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="offers.html">OFFERS</a></li>
             <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
+            <li><a href="contact.php">CONTACT</a></li>
         </ul>
     </div>
     <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -140,7 +140,7 @@
 
 <section class="cta">
     <h1>Let us Move Forward Together</h1>
-    <a href="" class="hero-btn">CONTACT US</a>
+    <a href="contact.php" class="hero-btn">CONTACT US</a>
 </section>
 
 <!-- Footer-->
