--- a/about.html
+++ b/about.html
@@ -18,12 +18,10 @@
     <div class="nav-links" id="navLinks">
         <i class="fa fa-times" onclick="hideMenu()"></i>
         <ul>
-            
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="offers.html">OFFERS</a></li>
             <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.php">CONTACT</a></li>
         </ul>
     </div>
     <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -35,9 +33,22 @@
     <div class="row">
         <div class="about-col">
             <h1>Vision</h1>
-            <p>Vision</p>
+            <p>Our vision at MJES Bookkeeping is to become the leading provider of bookkeeping services for small businesses, recognized
+                 for our expertise, exceptional service, and commitment to excellence. We aim to constantly adapt and embrace emerging
+            technologies to enhance our efficiency and deliver innovative solutions that meet the evolving needs of our clients. By
+            empowering small businesses with accurate financial insights, we aspire to contribute to their growth and success,
+            fostering long-term partnerships built on trust and reliability.</p>
             <h1>Mission</h1>
-            <p>Mision</p>
+            <p>At MJES Bookkeeping, our mission is to provide reliable and accurate bookkeeping services to small businesses, helping
+            them streamline their financial processes and make informed decisions. We strive to maintain the highest level of
+            professionalism, integrity, and client satisfaction in all our interactions. Our goal is to be the trusted partner that
+            simplifies bookkeeping, allowing our clients to focus on their core business operations and achieve their financial
+            objectives.</p>
+            <h1>Corporate Social Responsiblity</h1>
+            <p>To Serve our community with commitment, 
+                dedication and to walk by faith to bless and help others</p>
+            <h1>Core Values</h1>
+            <p>To serve with a grateful Heart</p>
             <a href="blog.html" class="hero-btn red-btn">EXPLORE NOW</a>
         </div>
         <div class="about-col">
@@ -50,13 +61,10 @@
  
 <section class="footer">
     <h4>About Us</h4>
-    <p>Description</p>
-        <div class="icons">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-envelope"></i>
-            <i class="fa fa-linkedin"></i>
-        </div>
-        <p><i class="fa fa-copyright"></i>Copyright.<br>All rights Reserved.</p>
+    <p>We value clear and transparent communication, which is why we take the time to understand your unique
+        requirements and
+        tailor our services accordingly.</p>
+    <p><i class="fa fa-copyright"></i>Copyright.<br>All rights Reserved.</p>
 </section>
 
 
