--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,6 @@
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="offers.html">OFFERS</a></li>
             <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.php">CONTACT</a></li>
         </ul>
     </div>
     <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -36,29 +35,19 @@
         <div class="blog-left">
             <img src="images/certificate.jpg">
             <h2>Our Certificate & Permits</h2>
-            <p>text</p>
+            <p>DTI</p>
             <br>
-            <p>text</p>
+            <p>Mayors</p>
             <br>
-            <p>text</p>
+            <p>BIR</p>
             <br>
-            <p>text</p>
-
-            <div class="comment-box">
-                <h3>Leave a comment</h3>
-                <form class="comment-form">
-                    <input type="text" placeholder="Entetr Name">
-                    <input type="email" placeholder="Enter Email">
-                    <textarea rows="5" placeholder="Your Comment"></textarea>
-                    <button type="submit" class="hero-btn red-btn">POST COMMENT</button>
-                </form>
-            </div>
+            <p>Cebu City covering Central Visayas</p>
         </div>
         <div class="blog-right">
             <h3>Categories</h3>
             <div>
                 <span>Human Resources</span>
-                <span>21</span>
+                <span>10</span>
             </div>
             <div>
                 <span>Consultancy</span>
@@ -66,11 +55,11 @@
             </div>
             <div>
                 <span>BSP Accredetation</span>
-                <span>21</span>
+                <span>2</span>
             </div>
             <div>
                 <span>BOOKKEEPING SERVICES</span>
-                <span>21</span>
+                <span>67</span>
         </div>
     </div>
 </section>
@@ -78,14 +67,12 @@
  
 <section class="footer">
     <h4>About Us</h4>
-    <p>Description</p>
-        <div class="icons">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-envelope"></i>
-            <i class="fa fa-linkedin"></i>
-        </div>
-        <p><i class="fa fa-copyright"></i>Copyright.<br>All rights Reserved.</p>
+    <p>We value clear and transparent communication, which is why we take the time to understand your unique
+        requirements and
+        tailor our services accordingly.</p>
+    <p><i class="fa fa-copyright"></i>Copyright.<br>All rights Reserved.</p>
 </section>
+
 
 
 <!-- JAVASCRIPT FOR TOGGLE MENU -->
