--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     <div class="nav-links" id="navLinks">
         <i class="fa fa-times" onclick="hideMenu()"></i>
         <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="offers.html">OFFERS</a></li>
-            <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.php">CONTACT</a></li>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="offers.html">OFFERS</a></li>
+        <li><a href="blog.html">BLOG</a></li>
         </ul>
     </div>
     <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -102,58 +101,14 @@
         </div>
     </div>
 </section>
-
-<!-- TESTIMONIALS -->
-<section class="testimonials">
-    <h1>What Our Clients Says</h1>
-    <p>Reviews  of our  clients</p>
-
-        <div class="row">
-            <div class="testimonial-col">
-                <img src="./images/user1.jpg">
-                <div>
-                    <p>FeedBack</p>
-                    <h3>Clients Name</h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-            </div>
-            <div class="testimonial-col">
-                <img src="./images/user2.jpg">
-                <div>
-                    <p>FeedBack</p>
-                    <h3>Clients Name</h3>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-half-o"></i>
-                </div>
-            </div>
-        </div>
-</section>
-
-<!-- Call To Action -->
-
-<section class="cta">
-    <h1>Let us Move Forward Together</h1>
-    <a href="contact.php" class="hero-btn">CONTACT US</a>
-</section>
-
 <!-- Footer-->
  
 <section class="footer">
     <h4>About Us</h4>
-    <p>Description</p>
-        <div class="icons">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-envelope"></i>
-            <i class="fa fa-linkedin"></i>
-        </div>
-        <p><i class="fa fa-copyright"></i>Copyright.<br>All rights Reserved.</p>
+    <p>We value clear and transparent communication, which is why we take the time to understand your unique
+        requirements and
+        tailor our services accordingly.</p>
+    <p><i class="fa fa-copyright"></i>Copyright.<br>All rights Reserved.</p>
 </section>
 
 
