--- a/offers.html
+++ b/offers.html
@@ -18,12 +18,10 @@
     <div class="nav-links" id="navLinks">
         <i class="fa fa-times" onclick="hideMenu()"></i>
         <ul>
-            
             <li><a href="index.html">HOME</a></li>
             <li><a href="about.html">ABOUT</a></li>
             <li><a href="offers.html">OFFERS</a></li>
             <li><a href="blog.html">BLOG</a></li>
-            <li><a href="contact.php">CONTACT</a></li>
         </ul>
     </div>
     <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -98,12 +96,8 @@
  
 <section class="footer">
     <h4>About Us</h4>
-    <p>Description</p>
-        <div class="icons">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-envelope"></i>
-            <i class="fa fa-linkedin"></i>
-        </div>
+    <p>We value clear and transparent communication, which is why we take the time to understand your unique requirements and
+    tailor our services accordingly.</p>
         <p><i class="fa fa-copyright"></i>Copyright.<br>All rights Reserved.</p>
 </section>
 
