--- a/about.html
+++ b/about.html
@@ -33,8 +33,9 @@
     <div class="row">
         <div class="about-col">
             <h1>Vision</h1>
-            <p>Our vision at MJES Bookkeeping is to become the leading provider of bookkeeping services for small businesses, recognized
-                 for our expertise, exceptional service, and commitment to excellence. We aim to constantly adapt and embrace emerging
+            <p>Our vision at MJES Bookkeeping is to become the leading provider of bookkeeping services for small businesses,
+            recognized
+            for our expertise, exceptional service, and commitment to excellence. We aim to constantly adapt and embrace emerging
             technologies to enhance our efficiency and deliver innovative solutions that meet the evolving needs of our clients. By
             empowering small businesses with accurate financial insights, we aspire to contribute to their growth and success,
             fostering long-term partnerships built on trust and reliability.</p>
