--- a/blog.html
+++ b/blog.html
@@ -35,13 +35,13 @@
         <div class="blog-left">
             <img src="images/certificate.jpg">
             <h2>Our Certificate & Permits</h2>
-            <p>DTI</p>
+            <p>DTI &#10004</p>
             <br>
-            <p>Mayors</p>
+            <p>Mayors &#10004</p>
             <br>
-            <p>BIR</p>
+            <p>BIR &#10004</p>
             <br>
-            <p>Cebu City covering Central Visayas</p>
+            <p>Cebu City covering Central Visayas &#10004</p>
         </div>
         <div class="blog-right">
             <h3>Categories</h3>
